--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Blog Preview Card</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,20 +13,19 @@
     />
   </head>
   <body>
-
-      <div class="card">
-        <img class="img1" src="assets/images/illustration-article.svg" />
-        <span class="type">Learning</span>
-        <p class="publish">published 21 dec ,2023</p>
-        <h2 class="title">HTML & CSS foundations</h2>
-        <p class="content">
-          These Languages are the backbone of every website , defining
-          structure, content, and presentation.
-        </p>
-        <div class="publisher">
-          <img class="img2" src="assets/images/image-avatar.webp" alt="" />
-          <span class="the_publisher"> Greg Hooper </span>
-        </div>
+    <div class="card">
+      <img class="img1" src="assets/images/illustration-article.svg" />
+      <span class="type">Learning</span>
+      <p class="publish">published 21 dec ,2023</p>
+      <h2 class="title">HTML & CSS foundations</h2>
+      <p class="content">
+        These Languages are the backbone of every website , defining structure,
+        content, and presentation.
+      </p>
+      <div class="publisher">
+        <img class="img2" src="assets/images/image-avatar.webp" alt="" />
+        <span class="the_publisher"> Greg Hooper </span>
       </div>
+    </div>
   </body>
 </html>
