fixied centering the card

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="card">
       <img class="img1" src="assets/images/illustration-article.svg" />
-      <h4 class="type">Learning</h4>
+      <span class="type">Learning</span>
       <p class="publish">published 21 dec ,2023</p>
       <h2 class="title">HTML & CSS foundations</h2>
       <p class="content">
